# wasak

./: .dockerignore  .env.template  .gitignore  Dockerfile  Readme.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
api/: clova.py  info.py  speech.py
api/configs/: clova.py  db.py  open_ai.py
api/configs/aws/: s3.py
api/controller/: chatbot.py  info.py  speech.py
api/data/: client.py  enums.py  result_client.py  result_tables.py  shortcuts.py  tables.py
api/service/: analaysis_record.py  analysis_record.py  audio_analysis_service.py  cache_service.py  clova_service.py  ffmpeg_service.py  noise_reduce_service.py  speech.py  speech_correction_symbol_service.py  stt_analysis_service.py
api/service/aws/: s3.py
api/utils/: audio.py  bytes.py
aws/: s3.py
data/: client.py
research/: lpm analysis by window.ipynb  sentence_split.ipynb
research/samples/: Analysis_LPM_sample.json  Analysis_PAUSE_sample.json  kiwi_splitted_lpm.txt  kss_concatenated_script_sample.json  kss_splitted_lpm.txt
resource/test/stt/: example.json
service/: audio_analysis_service.py  cache_service.py  ffmpeg_service.py  s3_service.py
src/aws/: s3.py
test/: test_util_audio.py
utils/: ffmpeg_service.py
