[tool.poetry]
name = "wasak"
version = "0.1.0"
description = "Speech analysis server for Tokpeanut"
authors = ["pcjs156 <qkrdbqls1001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
