[tool.poetry]
name = "wasak"
version = "0.1.0"
description = "Speech analysis server for Tokpeanut"
authors = ["pcjs156 <qkrdbqls1001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.17"
flask = "^2.3.2"
boto3 = "^1.26.154"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
boto = "^2.49.0"
uvicorn = "^0.22.0"
librosa = "^0.10.0.post2"
soundfile = "^0.12.1"
noisereduce = "^2.0.1"
wavfile = "^4.7.0"
sqlalchemy = "^2.0.19"
fastapi = "^0.100.0"
pydantic-settings = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
